fix secondary color contrast

--- a/assets/scss/color.scss
+++ b/assets/scss/color.scss
@@ -9,7 +9,7 @@
     --settings-color-primary-light: 250, 27%, 40%;
     --settings-color-primary-dark: 243, 100%, 9%;
 
-    --settings-color-secondary: 334, 80%, 51%;
+    --settings-color-secondary: 334, 70%, 50%;
     --settings-color-secondary-light: 335, 100%, 69%;
     --settings-color-secondary-dark: 334, 100%, 34%;
 
